# VoiceFlow

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: release.yml
docs/plans/: release-guide.md
installer/: AppRun  VoiceFlow.desktop  build-linux.sh  build-macos.sh  voiceflow.iss
src/: App.tsx  index.css
src-pyloid/: app_controller.py  main.py  server.py
src-pyloid/services/: audio.py  clipboard.py  gpu.py  hotkey.py  linux_input.py  model_manager.py  platform.py  settings.py  transcription.py
src-pyloid/tests/: test_hotkey.py  test_model_manager.py
src/components/: HomePage.tsx  HotkeyCapture.tsx  ModelDownloadProgress.tsx  SettingsTab.tsx  Sidebar.tsx  StatsHeader.tsx
src/lib/: api.ts  constants.ts  types.ts
src/pages/: Onboarding.tsx
