[project]
name = "VoiceFlow"
version = "1.4.0"
readme = "README.md"
description = "Voice-to-text paste utility"

requires-python = ">=3.9"

dependencies = [
    "pyloid",
    "faster-whisper",
    "pynput",
    "sounddevice",
    "numpy",
    "pyperclip",
    "pyautogui",
    "keyboard>=0.13.5; sys_platform == 'win32'",
    "evdev>=1.7.0; sys_platform == 'linux'",
    "nvidia-cublas-cu12; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pyloid-builder",
    "pyloid-watcher",
    "ruff",
    "pytest",
]
